[project]
name = "sort"
version = "0.1.0"
description = ""
authors = [
    { name = "gal16v8d" }
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "tk>=0.1.0"
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "black>=26.3.1"
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
